2006-02-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/advanced-notation.itely (Clusters): insert
	end ignore too.

	* lily/tie-column.cc (calc_positioning_done): support for
	tie-score debugging

	* lily/tie-formatting-problem.cc
	(generate_extremal_tie_variations): factor out.
	(score_ties_configuration): annotate all tie 
	(print_ties_configuration): new routine.
	(generate_configuration): nudge extremal ties outside of the head
	Y extents.
	(score_ties_configuration): oops. convert to staff-space before
	determining position symmetry.

2006-02-20  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/*-notation.itely: misc minor editing,
	shifting doc sections around.

	* Documentation/user/*-notation-itely, global.itely,
	changing-defaults.itely: added new stuff from NEWS.

2006-02-20  Heikki Junes  <hjunes@cc.hut.fi>

	* po/fi.po: update.

2006-02-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond-vars.make (LILYPOND_BOOK_FLAGS): don't run
	lilypond --verbose for lp-book.

	* make/mutopia-rules.make ($(outdir)/%.png $(outdir)/%.pdf
	$(outdir)/%.ly $(outdir)/%.ps): use $(srcdir) iso $(shell pwd).

	* make/lysdoc-rules.make ($(outdir)/collated-files.tely): use
	$(buildscript-dir) iso. absolute depth.

	* buildscripts/genicon.py (dir): thinko.

	* Documentation/pictures/GNUmakefile ($(outdir)/%.ico): typo.

2006-02-19 Erik Sandberg  <mandolaerik@gmail.com>

	* scm/output-lib.scm: swap darkcyan/darkyellow

	* THANKS: Add bughunters.

2006-02-19  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/programming-interfaces.itely: fixed example.

	* Documentation/user/instrument-notation.itely: fix @{ @}.

	* scm/script.scm: add avoid-slur for \open.

2006-02-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie-formatting-problem.cc (score_configuration): use
	sliding score for min-length. 

	* Documentation/pictures/GNUmakefile (local-dist): loose the rule
	spaghetti for icons.
