@@ -23,8 +23,8 @@ Sven Axelsson
 Werner Lemberg
 Yoshinobu Ishizaki
 
-SPONSORS
 
+SPONSORS
 
 Aaron Mehl
 Basil Crow
