@@ -1,5 +1,12 @@
 2006-02-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/include/constrained-breaking.hh (class
+	Constrained_breaking): new file.
+
+	* lily/constrained-breaking.cc (resize): new file.
+
+	* lily/gourlay-breaking.cc (do_solve): ragged-last iso raggedlast
+
 	* Documentation/user/advanced-notation.itely (Clusters): insert
 	end ignore too.
 
